NetBSD Problem Report #38048

From dan@geek.com.au  Mon Feb 18 00:16:07 2008
Return-Path: <dan@geek.com.au>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id AA51363B293
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 18 Feb 2008 00:16:07 +0000 (UTC)
Message-Id: <20080218001604.57E4E49F28@geek.com.au>
Date: Mon, 18 Feb 2008 11:16:04 +1100 (EST)
From: dan@geek.com.au
Reply-To: dan@geek.com.au
To: gnats-bugs@gnats.NetBSD.org
Subject: SCHED_M2 ignores nice
X-Send-Pr-Version: 3.95

>Number:         38048
>Category:       kern
>Synopsis:       SCHED_M2 ignores nice
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    rmind
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Feb 18 00:20:00 +0000 2008
>Closed-Date:    Sat Oct 18 03:44:15 +0000 2008
>Last-Modified:  Sat Oct 18 03:45:06 +0000 2008
>Originator:     Daniel Carosone
>Release:        NetBSD 4.99.54
>Organization:

>Environment:
System: NetBSD imslog 4.99.54 NetBSD 4.99.54 (_imslog_) #13: Thu Feb 14 13:49:38 EST 2008  dan@imslog:/home/NetBSD/obj/p4/home/NetBSD/HEAD/src/sys/arch/i386/compile/_imslog_ i386
Architecture: i386
Machine: i386
>Description:

nice(1) does not work with SCHED_M2, nor as shell builtin using
nice(3) or via renice(8) or top(1) or other familiar tools.

I understand that I'm supposed to use schedctl(8) somehow instead,
unfortunately none of the application software that expects posix
niceness to work when launching jobs shares this understanding.

Not obeying niceness standard interfaces is a regression, even if
these are to be reimplemented somehow over schedctl.

>How-To-Repeat:

Try to nice processes, or have batch schedulers start background
processes with non-default nice values.

>Fix:


>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->rmind
Responsible-Changed-By: rmind@narn.netbsd.org
Responsible-Changed-When: Mon, 18 Feb 2008 01:09:17 +0000
Responsible-Changed-Why:
Take.


State-Changed-From-To: open->closed
State-Changed-By: rmind@NetBSD.org
State-Changed-When: Sat, 18 Oct 2008 03:44:15 +0000
State-Changed-Why:
Fixed.


From: Mindaugas Rasiukevicius <rmind@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/38048 CVS commit: src/sys/kern
Date: Sat, 18 Oct 2008 03:44:04 +0000 (UTC)

 Module Name:	src
 Committed By:	rmind
 Date:		Sat Oct 18 03:44:04 UTC 2008

 Modified Files:
 	src/sys/kern: sched_m2.c

 Log Message:
 Make SCHED_M2 nice with nice(1).  Closes PR/38048.


 To generate a diff of this commit:
 cvs rdiff -r1.26 -r1.27 src/sys/kern/sched_m2.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.