Make SCHED_M2 nice with nice(1).  Closes PR/38048.